--- a/public/index.html
+++ b/public/index.html
@@ -2,63 +2,76 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Let Me 3D Print That For You | lm3dptfy.online</title>
+  <title>LM3DPTFY.online | Let Me 3D Print That For You</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Paste an STLFlix model link and get a custom 3D printing quote by email." />
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="page-bg">
-  <header class="top-bar">
-    <div class="top-bar-inner">
-      <div class="brand">
-        LM3DPTFY<span class="brand-dot">.ONLINE</span>
+<body>
+  <div class="page-shell">
+    <main class="page-main">
+      <div class="main-inner">
+        <div class="logo-wrap">
+          <img
+            src="logo-lm3dptfy-tp.png"
+            alt="LM3DPTFY.online - Let Me 3D Print That For You"
+            class="main-logo"
+          />
+        </div>
+
+        <h1 class="hero-title">Let Me 3D Print That For You</h1>
+        <p class="hero-subtitle">
+          Paste a public <strong>STLFlix</strong> link and I’ll email you a quote for printing it.
+        </p>
+
+        <form class="stl-form" action="request.html" method="GET">
+          <label for="stlLink" class="field-label">
+            <a href="https://platform.stlflix.com/explore" target="_blank" rel="noopener noreferrer">
+              STLFlix model link
+            </a>
+          </label>
+          <input
+            type="url"
+            id="stlLink"
+            name="link"
+            class="field-input big-input"
+            placeholder="https://stlflix.com/..."
+            required
+          />
+          <button type="submit" class="btn-primary">
+            Get Quote
+          </button>
+        </form>
+
+        <div class="info-stack">
+          <h2 class="info-title">How this works</h2>
+          <ol class="info-list-ol">
+            <li>Find a model on STLFlix and copy the link.</li>
+            <li>Paste it here and tell me what you have in mind.</li>
+            <li>I’ll email your quote, ETA, and any questions.</li>
+          </ol>
+
+          <h2 class="info-title" style="margin-top:8px;">What I’ll send you</h2>
+          <ul class="info-list">
+            <li>Pricing based on material, size, and print time.</li>
+            <li>A clear timeline from “sent to printer” to “shipped”.</li>
+            <li>Simple next steps to approve or tweak your order.</li>
+          </ul>
+        </div>
+
+        <p class="small-note">
+          Need a model? Click “STLFlix model link” above to browse files on STLFlix.
+        </p>
+        <p class="small-note">
+          I won’t print weapons, illegal items, or obviously infringing IP.
+        </p>
       </div>
-      <nav class="top-links">
-        <a href="admin.html">Admin</a>
-      </nav>
-    </div>
-  </header>
+    </main>
 
-  <main class="center-wrapper">
-    <div class="center-card">
-      <div class="logo-wrap">
-        <img
-          src="logo-lm3dptfy-tp.png"
-          alt="LM3DPTFY.online - Let Me 3D Print That For You"
-          class="main-logo"
-        />
-      </div>
-
-      <h1 class="hero-title">Share an STLFlix model, I’ll handle the printing.</h1>
-      <p class="hero-subtitle">
-        Paste your <strong>STLFlix</strong> model link below and I’ll email you a custom 3D printing quote.
-      </p>
-
-      <form class="stl-form" action="request.html" method="GET">
-        <label for="stlLink" class="field-label">
-          <a href="https://platform.stlflix.com/explore" target="_blank" rel="noopener noreferrer">
-            STLFlix model link
-          </a>
-        </label>
-        <input
-          type="url"
-          id="stlLink"
-          name="link"
-          class="field-input big-input"
-          placeholder="https://stlflix.com/..."
-          required
-        />
-        <button type="submit" class="btn-primary big-btn">
-          Get Quote
-        </button>
-      </form>
-
-      <p class="small-note">
-        Need a model? Click “STLFlix model link” above to browse files on STLFlix.
-      </p>
-      <p class="small-note">
-        No account required. I’ll only use your email to send the quote and ask questions if needed.
-      </p>
-    </div>
-  </main>
+    <footer class="site-footer">
+      Let Me 3D Print That For You · LM3DPTFY.online ·
+      Questions? Email <a href="mailto:lm3dptfy@gmail.com">lm3dptfy@gmail.com</a>
+    </footer>
+  </div>
 </body>
 </html>
