--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <div class="main-inner">
         <div class="logo-wrap">
           <img
-            src="logo-lm3dptfy-tp.png"
+            src="lm3dptfy-logo-tp-cropped.png"
             alt="LM3DPTFY.online - Let Me 3D Print That For You"
             class="main-logo"
           />
