--- a/public/request.html
+++ b/public/request.html
@@ -14,7 +14,7 @@
           <div class="logo-wrap" style="text-align:left; margin-bottom:12px;">
             <a href="/" class="logo-link">
               <img
-                src="logo-lm3dptfy-tp.png"
+                src="lm3dptfy-logo-tp-cropped.png"
                 alt="LM3DPTFY.online - Let Me 3D Print That For You"
                 class="main-logo"
               />
