--- a/public/admin.html
+++ b/public/admin.html
@@ -44,7 +44,7 @@
           <div class="top-util-bar">
             <a href="/" class="logo-link">
               <img
-                src="logo-lm3dptfy-tp.png"
+                src="lm3dptfy-logo-tp-cropped.png"
                 alt="LM3DPTFY.online - Let Me 3D Print That For You"
                 class="main-logo"
               />
