--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <p class="hero-subtitle">
-          Paste a public <strong>STLFlix</strong> link and I’ll email you a quote for printing it.
+          Paste a public <strong>STLFlix</strong> link and I'll email you a quote for printing it.
         </p>
 
         <form class="stl-form" action="request.html" method="GET">
@@ -47,22 +47,22 @@
           <ol class="info-list-ol">
             <li>Find a model on STLFlix and copy the link.</li>
             <li>Paste it here and tell me what you have in mind.</li>
-            <li>I’ll email your quote, ETA, and any questions.</li>
+            <li>I'll email your quote, ETA, and any questions.</li>
           </ol>
 
-          <h2 class="info-title" style="margin-top:8px;">What I’ll send you</h2>
+          <h2 class="info-title" style="margin-top:8px;">What I'll send you</h2>
           <ul class="info-list">
             <li>Pricing based on material, size, and print time.</li>
-            <li>A clear timeline from “sent to printer” to “shipped”.</li>
+            <li>A clear timeline from "sent to printer" to "shipped".</li>
             <li>Simple next steps to approve or tweak your order.</li>
           </ul>
         </div>
 
         <p class="small-note">
-          Need a model? Click “STLFlix model link” above to browse files on STLFlix.
+          Need a model? Click "STLFlix model link" above to browse files on STLFlix.
         </p>
         <p class="small-note">
-          I won’t print weapons, illegal items, or obviously infringing IP.
+          I won't print weapons, illegal items, or obviously infringing IP.
         </p>
       </div>
     </main>
