--- a/public/index.html
+++ b/public/index.html
@@ -2,68 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>LM3DPTFY.online | Let Me 3D Print That For You</title>
+  <title>Let Me 3D Print That For You</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Paste an STLFlix model link and get a custom 3D printing quote by email." />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
   <div class="page-shell">
+
+    <header class="site-header">
+      <div class="header-inner">
+        <a class="brand" href="/">
+          <img class="brand-logo" src="/lm3dptfy-logo-tp-cropped.png" alt="LM3DPTFY logo" />
+          <span class="brand-text">
+            <span class="brand-title">Let Me 3D Print That For You</span>
+            <span class="brand-subtitle">Fast quotes • Clear ETA • No spam</span>
+          </span>
+        </a>
+
+        <nav class="nav-links">
+          <a class="nav-link" href="#how-it-works">How it works</a>
+        </nav>
+      </div>
+    </header>
+
     <main class="page-main">
       <div class="main-inner">
-        <div class="logo-wrap">
-          <img
-            src="lm3dptfy-logo-tp-cropped.png"
-            alt="LM3DPTFY.online - Let Me 3D Print That For You"
-            class="main-logo"
-          />
-        </div>
 
+        <h1 class="hero-title">Turn STLFlix models into real prints.</h1>
         <p class="hero-subtitle">
-          Paste a public <strong>STLFlix</strong> link and I'll email you a quote for printing it.
+          Paste a public <strong>STLFlix</strong> link. I’ll email you pricing, ETA, and any quick questions before printing.
         </p>
 
-        <form class="stl-form" action="request.html" method="GET">
-          <label for="stlLink" class="field-label">
-            <a href="https://platform.stlflix.com/explore" target="_blank" rel="noopener noreferrer">
-              STLFlix model link
-            </a>
-          </label>
-          <input
-            type="url"
-            id="stlLink"
-            name="link"
-            class="field-input big-input"
-            placeholder="https://stlflix.com/..."
-            required
-          />
-          <button type="submit" class="btn-primary">
-            Get Quote
-          </button>
-        </form>
+        <div class="card hero-card">
+          <form class="stl-form" action="/request.html" method="GET">
+            <div class="field-group">
+              <label for="stlLink" class="field-label">
+                <a href="https://platform.stlflix.com/explore" target="_blank" rel="noopener noreferrer">
+                  STLFlix model link
+                </a>
+              </label>
+              <input
+                type="url"
+                id="stlLink"
+                name="link"
+                class="field-input big-input"
+                placeholder="https://stlflix.com/..."
+                required
+              />
+            </div>
 
-        <div class="info-stack">
+            <button type="submit" class="btn-primary">Get Quote</button>
+          </form>
+
+          <p class="small-note" style="margin:12px 0 0;">
+            Need a model? Click “STLFlix model link” above to browse files.
+          </p>
+        </div>
+
+        <div id="how-it-works" class="info-stack">
           <h2 class="info-title">How this works</h2>
           <ol class="info-list-ol">
             <li>Find a model on STLFlix and copy the link.</li>
-            <li>Paste it here and tell me what you have in mind.</li>
-            <li>I'll email your quote, ETA, and any questions.</li>
+            <li>Paste it here, then add your name/email on the next step.</li>
+            <li>I’ll reply with a quote + ETA (and any questions) before printing.</li>
           </ol>
 
-          <h2 class="info-title" style="margin-top:8px;">What I'll send you</h2>
-          <ul class="info-list">
-            <li>Pricing based on material, size, and print time.</li>
-            <li>A clear timeline from "sent to printer" to "shipped".</li>
-            <li>Simple next steps to approve or tweak your order.</li>
-          </ul>
+          <div class="info-cards">
+            <div class="info-card">
+              <h3 class="info-card-title">Quote</h3>
+              <p class="info-card-text">Price based on material, size, and print time — no guessing.</p>
+            </div>
+            <div class="info-card">
+              <h3 class="info-card-title">Timeline</h3>
+              <p class="info-card-text">Clear status from “sent to printer” to “shipped”.</p>
+            </div>
+            <div class="info-card">
+              <h3 class="info-card-title">Next steps</h3>
+              <p class="info-card-text">Approve, tweak, or ask questions — quick and simple.</p>
+            </div>
+          </div>
+
+          <p class="small-note">
+            I won’t print weapons, illegal items, or obviously infringing IP.
+          </p>
         </div>
 
-        <p class="small-note">
-          Need a model? Click "STLFlix model link" above to browse files on STLFlix.
-        </p>
-        <p class="small-note">
-          I won't print weapons, illegal items, or obviously infringing IP.
-        </p>
       </div>
     </main>
 
